fix line overflow

--- a/css/style.less
+++ b/css/style.less
@@ -2555,7 +2555,7 @@ footer {
     width: 100%;
     height: 60px; /* Fallback for non-webkit */
     font-size: 14px;
-    -webkit-line-clamp: 2;
+    /*-webkit-line-clamp: 2;*/
     -webkit-box-orient: vertical;
     overflow: hidden;
     /* line-height: 1.4;*/
